2010-01-20 McCabe Maxsted  <hakushakukun@gmail.com>

	* Fixed crash due to missing FloaterHtmlRect setting.
	
	  modified:   linden/indra/newview/app_settings/settings.xml
	  

2010-01-14 McCabe Maxsted  <hakushakukun@gmail.com>

	* Removed unnecessary xui files from silver skin.
	
	  modified:   linden/indra/newview/skins/default/xui/en-us/floater_about_land.xml
	  modified:   linden/indra/newview/skins/default/xui/en-us/floater_env_settings.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/floater_about_land.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/floater_directory.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/floater_env_settings.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/floater_live_lsleditor.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/floater_water.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/floater_windlight_options.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/panel_status_bar.xml
	  deleted:    linden/indra/newview/skins/silver/xui/en-us/panel_voice_controls.xml


	* Applied patch for VWR-14278 by Aimee Trescothick: 
	  Gesture auto-completion adds uncommitted suggestions to the line editor history.
	
	  modified:   linden/indra/llui/lllineeditor.cpp
	  modified:   linden/indra/llui/lllineeditor.h


	* Applied patch for VWR-14267 by Aimee Trescothick: 
	  Clicking send in an IM window does not add the sent text to the line editor history.
	
	  modified:   linden/indra/newview/llimpanel.cpp
	  
	  
	* Applied patch for VWR-11172 by Alissa Sabre: 
	  A source coding mistake prevents number-pad keys from specifying Ctrl+digit shortcuts on Windows.
	
	  modified:   linden/indra/llwindow/llkeyboardwin32.cpp
	  
	  
2010-01-13 McCabe Maxsted  <hakushakukun@gmail.com>

	* Created drop-down Profile button in IM window.
	
	  modified:   linden/indra/newview/llimpanel.cpp
	  modified:   linden/indra/newview/llimpanel.h