@@ -1,3 +1,10 @@
+2010-01-27  Jacek Antonelli  <jacek.antonelli@gmail.com>
+
+	* Minor fixes for Magical Scripted HUD/UI to compile.
+
+	  modified:   linden/indra/newview/CMakeLists.txt
+	  modified:   linden/indra/newview/llpreviewnotecard.cpp
+
 2010-01-20 McCabe Maxsted  <hakushakukun@gmail.com>
 
 	* Fixed crash due to missing FloaterHtmlRect setting.
